--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,20 +3,20 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:PEHtPEh/yEQL9bzdjMnb,iv:RMKSH+PPWu6uFGkUXE1bvXZyJb0XNo9E74jtZow3nxs=,tag:eZQwMpLc1M94uiTMWbP/aQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:ylhGkik78mN+ZcLaENau,iv:VZN/LK0QhKrnhsq6OHovEltvhR9NcQRbl7cRnlWbMY8=,tag:+qYAq+k/5WtdqIxXs4ma2g==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsd20xcGFibmdNZ3RCUzln
-        b2R1ODdRTzFPMFEzQTkyOXpOSGVkQ29SMVNNCmMrMWRMYi9IVUk4OXpjT0sxMW9s
-        aVJBd0Q3U1VBM3J5QmJhUU43c2NseXcKLS0tIFU0d1lBcjc4YU04WU0vUkVtQjE0
-        VmJNMWlDNy9MSnFOVDhwQVpDMDVpOE0KwEcVSuNKaK1ufn45dOIziFUwj1Sry7jZ
-        s6YaoR3yzcMBYj17fj0BBezzmJNFnSBz+8Fu39KNRMANchRFnYtaBw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwV1NUUDRHTC9KSXZtV0hi
+        dUdUY3E5ZGY2RTY4UEF3dzVSSzJBUEoxTEJrCnpzQ1dKUkhnb0NVVHVUaGNoaHdq
+        cTVuN1l0cENpNlFmdHUrNHNxcDVRTWcKLS0tIHBJRGV2a0xNVlhnTWZ2NWNvb2VQ
+        VVRWeDVKcTk5WFV1c3pvV2N2bnNrYXMKeE9oROGiqVTj5hhNvysb7HrL2GJhJ0H1
+        j0K8P8GL+7lbgkV9F2kDsMwMqgVTMGXewFdhcSQBBF0QIKbegQck0Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-25T05:59:00Z"
-  mac: ENC[AES256_GCM,data:xLvzKA/y0NTOcfFIBw82kgC6W9NQnNTKoatd/Y14MKH+bEBR1cmvglI3X8/PPpnUfp3/d5A0qVHmHm5tOPWfdYrj8MtiZb5A34knrlbkqOZZqd7kAN7KClmwFkWrEllP4ySykcrc4Umt7Ga5M8eMVs0MHfWcDyodwor8VVnKpe0=,iv:ZwKAc43Gksk2uE0X068wNTK3nKfvwmXdDJP7bxqMd3U=,tag:LuF79hDHBexLl8L52yVTpA==,type:str]
+  lastmodified: "2025-11-25T06:30:11Z"
+  mac: ENC[AES256_GCM,data:2wKs9s5n/vQW0hYMuF1AKwtOYR5bjKBIVMjN6HU0F9exdA7KaQV3JJPoZ1kNuZltpX6QiZ+c8as43lEsy8pIW8t3HYvNCscjpYWTJvDElg4vPpibNAWbFOZWZ8HuBcyap8jl5E7Go62E7ZaECyLAD3Mm4aMXAqDXOAviCW+rreo=,iv:E7l5FaV7T3/7oZBUcQqEDzZ4C7iDt4hQo7S9RvTfsJQ=,tag:DPpIhErrVMQGS7wEgcWk+A==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
