--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -29,16 +29,15 @@ nodes:
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "00:e0:4c:08:07:31"
-        vlans:
-          - vlanId: 2002
-            addresses:
-              - "10.200.2.11/24"
-            mtu: 1500
-            routes:
-              - network: "0.0.0.0/0"
-                gateway: "10.200.2.1"
-            vip:
-              ip: "10.200.2.10"
+        dhcp: false
+        addresses:
+          - "10.200.2.11/24"
+        routes:
+          - network: "0.0.0.0/0"
+            gateway: "10.200.2.1"
+        mtu: 1500
+        vip:
+          ip: "10.200.2.10"
   - hostname: "n100-02"
     ipAddress: "10.200.2.12"
     installDisk: "/dev/disk/by-id/nvme-Apacer_AS2280P4_512GB_N32339112870"
@@ -49,16 +48,15 @@ nodes:
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "00:e0:4c:08:06:35"
-        vlans:
-          - vlanId: 2002
-            addresses:
-              - "10.200.2.12/24"
-            mtu: 1500
-            routes:
-              - network: "0.0.0.0/0"
-                gateway: "10.200.2.1"
-            vip:
-              ip: "10.200.2.10"
+        dhcp: false
+        addresses:
+          - "10.200.2.12/24"
+        routes:
+          - network: "0.0.0.0/0"
+            gateway: "10.200.2.1"
+        mtu: 1500
+        vip:
+          ip: "10.200.2.10"
   - hostname: "n100-03"
     ipAddress: "10.200.2.13"
     installDisk: "/dev/disk/by-id/nvme-WDC_PC_SN730_SDBQNTY-256G-1001_200955804009"
@@ -69,16 +67,15 @@ nodes:
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "a8:b8:e0:04:fa:96"
-        vlans:
-          - vlanId: 2002
-            addresses:
-              - "10.200.2.13/24"
-            mtu: 1500
-            routes:
-              - network: "0.0.0.0/0"
-                gateway: "10.200.2.1"
-            vip:
-              ip: "10.200.2.10"
+        dhcp: false
+        addresses:
+          - "10.200.2.13/24"
+        routes:
+          - network: "0.0.0.0/0"
+            gateway: "10.200.2.1"
+        mtu: 1500
+        vip:
+          ip: "10.200.2.10"
 
 # Global patches
 patches:
