Add rook operator

--- a/talos/clusterconfig/.gitignore
+++ b/talos/clusterconfig/.gitignore
@@ -2,3 +2,8 @@ kubernetes-n100-01.yaml
 kubernetes-n100-02.yaml
 kubernetes-n100-03.yaml
 talosconfig
+kubernetes-n100-04.yaml
+kubernetes-n100-05.yaml
+kubernetes-n100-06.yaml
+kubernetes-n100-07.yaml
+kubernetes-n100-08.yaml
