--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -8,10 +8,10 @@ tasks:
     dir: '{{.TALOS_DIR}}'
     cmd: talhelper genconfig
     preconditions:
-      - test -f {{.TALOS_DIR}}/talconfig.yaml
-      - test -f {{.ROOT_DIR}}/.sops.yaml
-      - test -f {{.SOPS_AGE_KEY_FILE}}
-      - which talhelper
+    - test -f {{.TALOS_DIR}}/talconfig.yaml
+    - test -f {{.ROOT_DIR}}/.sops.yaml
+    - test -f {{.SOPS_AGE_KEY_FILE}}
+    - which talhelper
 
   apply-node:
     desc: Apply Talos config to a node [IP=required]
@@ -20,12 +20,12 @@ tasks:
     vars:
       MODE: '{{.MODE | default "auto"}}'
     requires:
-      vars: [IP]
+      vars: [ IP ]
     preconditions:
-      - talosctl --nodes {{.IP}} get machineconfig
-      - talosctl config info
-      - test -f {{.TALOSCONFIG}}
-      - which talhelper talosctl yq
+    - talosctl --nodes {{.IP}} get machineconfig --insecure
+    - talosctl config info
+    - test -f {{.TALOSCONFIG}}
+    - which talhelper talosctl yq
 
   upgrade-node:
     desc: Upgrade Talos on a single node [IP=required]
@@ -37,12 +37,12 @@ tasks:
       TALOS_VERSION:
         sh: yq '.talosVersion' {{.TALOS_DIR}}/talenv.yaml
     requires:
-      vars: [IP]
+      vars: [ IP ]
     preconditions:
-      - talosctl --nodes {{.IP}} get machineconfig
-      - talosctl config info
-      - test -f {{.TALOSCONFIG}}
-      - which kubectl talhelper talosctl yq
+    - talosctl --nodes {{.IP}} get machineconfig
+    - talosctl config info
+    - test -f {{.TALOSCONFIG}}
+    - which kubectl talhelper talosctl yq
 
   upgrade-k8s:
     desc: Upgrade Kubernetes
@@ -52,9 +52,9 @@ tasks:
       KUBERNETES_VERSION:
         sh: yq '.kubernetesVersion' {{.TALOS_DIR}}/talenv.yaml
     preconditions:
-      - talosctl config info
-      - test -f {{.TALOSCONFIG}}
-      - which talhelper talosctl yq
+    - talosctl config info
+    - test -f {{.TALOSCONFIG}}
+    - which talhelper talosctl yq
 
   reset:
     desc: Resets nodes back to maintenance mode
@@ -62,4 +62,4 @@ tasks:
     prompt: This will destroy your cluster and reset the nodes back to maintenance mode... continue?
     cmd: talhelper gencommand reset --extra-flags="--reboot {{- if eq .CLI_FORCE false }} --system-labels-to-wipe STATE --system-labels-to-wipe EPHEMERAL{{ end }} --graceful=false --wait=false" | bash
     preconditions:
-      - which talhelper
+    - which talhelper
