--- a/kubernetes/components/namespace/namespace/kustomization.yaml
+++ b/kubernetes/components/namespace/namespace/kustomization.yaml
@@ -1,6 +1,5 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1alpha1
-kind: Component
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-# - ./alerts buroa github
-- ./namespace
+- ./namespace.yaml
