--- a/kubernetes/apps/volsync-system/snapshot-controller/ks.yaml
+++ b/kubernetes/apps/volsync-system/snapshot-controller/ks.yaml
@@ -3,26 +3,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app volsync
-  namespace: &namespace volsync
+  name: &app snapshot-controller
+  namespace: &namespace volsync-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-  - name: snapshot-controller
-    namespace: kube-system
   healthChecks:
   - apiVersion: helm.toolkit.fluxcd.io/v2
     kind: HelmRelease
-    name: *app
+    name: snapshot-controller
     namespace: *namespace
   interval: 1h
-  path: ./kubernetes/apps/volsync/volsync/app
-  postBuild:
-    substituteFrom:
-    - name: cluster-secrets
-      kind: Secret
+  path: ./kubernetes/apps/volsync-system/snapshot-controller/app
   prune: true
   retryInterval: 2m
   sourceRef:
