--- a/kubernetes/apps/rook-ceph/kustomization.yaml
+++ b/kubernetes/apps/rook-ceph/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 namespace: rook-ceph
 components:
 - ../../components/sops
-resources:
-- ./rook-ceph/ks.yaml
+#resources:
+#- ./rook-ceph/ks.yaml
