grr, remove auth again

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -52,6 +52,11 @@ spec:
       osd_recovery_max_active_hdd = 16
       # Default is false. Set to true to auto repair inconsensistencies on EC & bluestore pools
       osd_scrub_auto_repair = true
+      [global]
+      auth cluster required = none
+      auth service required = none
+      auth client required = none
+      auth supported = none
     cephClusterSpec:
       cephConfig:
         global:
