--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -7,8 +7,9 @@ components:
 - ../../components/namespace
 - ../../components/repos/app-template
 
-# resources:
-# - ./esphome/ks.yaml
+resources:
+- ./esphome/ks.yaml
+
 # - ./frigate/ks.yaml
 # - ./home-assistant/ks.yaml
 # - ./hyperhdr/ks.yaml
