--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: home-automation
 components:
 - ../../components/namespace
 - ../../components/repos/app-template
-
+- ../../components/sops
 resources:
 - ./esphome/ks.yaml
 
