--- a/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
@@ -160,8 +160,8 @@ spec:
         hostnames:
         - "{{ .Release.Name }}.${INGRESS_DOMAIN}"
         parentRefs:
-        - name: internal
-          namespace: kube-system
+        - name: envoy-internal
+          namespace: network
           sectionName: https
         rules:
         - matches:
