Add volsync secrets

--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,20 +3,24 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:ylhGkik78mN+ZcLaENau,iv:VZN/LK0QhKrnhsq6OHovEltvhR9NcQRbl7cRnlWbMY8=,tag:+qYAq+k/5WtdqIxXs4ma2g==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:t5g+NyDesWXGkwLfoEw5,iv:zq9Y3BgnaFeFXKWwMOcRA07f4kNiCr665jW8RobyWX0=,tag:FMFfJpElofUagQlSIOVUUQ==,type:str]
+  #ENC[AES256_GCM,data:nUUvoLYJczS8WB013/2LGw==,iv:1YSqbCu7u0daazbWJtWl3JQ6dHxfJKMbn+sta1rOctE=,tag:L7xx7TiIIDaENSGcXcaPdQ==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:TABTmXa4z2zrcg==,iv:CxlXWWQjV8eN17G9kPfYoq7IUubJBbEpUbg4BzwpE6A=,tag:KpmOOJuNYEFgO0vFjSwxsQ==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:PdLpvUJEy9x35+TBGqM0WOX9zHg=,iv:MhopsiqF22iD1AdkNvV17czblQ3APlGUxX4Sy9KZXlM=,tag:V5ttVVOA8ctgcRRGYkTpCw==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:isjYJRb04FmwS6yjPoUaKze328nKIm293kqhnfNpMp4wu/1lqULV9A==,iv:FYD9CIPx4RZBX9e0QfBwLgnUt7JA3yJ1V/BCa3QZ2vY=,tag:JFH3Pv7qbdM6OkncpB/Hyw==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwV1NUUDRHTC9KSXZtV0hi
-        dUdUY3E5ZGY2RTY4UEF3dzVSSzJBUEoxTEJrCnpzQ1dKUkhnb0NVVHVUaGNoaHdq
-        cTVuN1l0cENpNlFmdHUrNHNxcDVRTWcKLS0tIHBJRGV2a0xNVlhnTWZ2NWNvb2VQ
-        VVRWeDVKcTk5WFV1c3pvV2N2bnNrYXMKeE9oROGiqVTj5hhNvysb7HrL2GJhJ0H1
-        j0K8P8GL+7lbgkV9F2kDsMwMqgVTMGXewFdhcSQBBF0QIKbegQck0Q==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBraXNsZEdVVndaZzU4WDhJ
+        Yml2RXlCYlBNUWxIYko3YjZ2WnVJaUhvMmxrCjdxNFVib09zaEx1eEpYVS83UHZu
+        cjNhanZ5ZEMxWTlYZ0lNTTMrakg3d28KLS0tIEx0ODZRRXRBRmxnK0RZRFdQL1Za
+        N0t5cktkdEswWFEvbUlOb3JXcTVuRWcKvvqM6IN3riYHT1dw7ULjeC7csz+NBEAw
+        HMjcEXNTIXJcLCO/RH4vPW54/Qi4jiXy7PvOJik++gunn0ITo1x0Nw==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-25T06:30:11Z"
-  mac: ENC[AES256_GCM,data:2wKs9s5n/vQW0hYMuF1AKwtOYR5bjKBIVMjN6HU0F9exdA7KaQV3JJPoZ1kNuZltpX6QiZ+c8as43lEsy8pIW8t3HYvNCscjpYWTJvDElg4vPpibNAWbFOZWZ8HuBcyap8jl5E7Go62E7ZaECyLAD3Mm4aMXAqDXOAviCW+rreo=,iv:E7l5FaV7T3/7oZBUcQqEDzZ4C7iDt4hQo7S9RvTfsJQ=,tag:DPpIhErrVMQGS7wEgcWk+A==,type:str]
+  lastmodified: "2025-11-29T19:39:20Z"
+  mac: ENC[AES256_GCM,data:G37anzeg2yMs8klPP3dJxSjWQEUn0Og0F0PC3QZ/PhZKNAV2liF+aNaaUWPENwyZgeroRy4X6G9IfQvEYErejjsrJ5qQGnwCftYhEBCAm1+7aGmT+20ANaoS8bu/3W5ZFLngyAy/A6lRpPtlajyRp8Ea57DnuiZRXfuR2MslMN4=,iv:QsnIAmvJPmPKUW66iuZ/L7wlQtdDk+j+YCxzZ/VMJQI=,tag:B12T/X8A8on55Sp1WN5u5w==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
