Add in more secrets

--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,24 +3,27 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:t5g+NyDesWXGkwLfoEw5,iv:zq9Y3BgnaFeFXKWwMOcRA07f4kNiCr665jW8RobyWX0=,tag:FMFfJpElofUagQlSIOVUUQ==,type:str]
-  #ENC[AES256_GCM,data:nUUvoLYJczS8WB013/2LGw==,iv:1YSqbCu7u0daazbWJtWl3JQ6dHxfJKMbn+sta1rOctE=,tag:L7xx7TiIIDaENSGcXcaPdQ==,type:comment]
-  RESTIC_PASSWORD: ENC[AES256_GCM,data:TABTmXa4z2zrcg==,iv:CxlXWWQjV8eN17G9kPfYoq7IUubJBbEpUbg4BzwpE6A=,tag:KpmOOJuNYEFgO0vFjSwxsQ==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:PdLpvUJEy9x35+TBGqM0WOX9zHg=,iv:MhopsiqF22iD1AdkNvV17czblQ3APlGUxX4Sy9KZXlM=,tag:V5ttVVOA8ctgcRRGYkTpCw==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:isjYJRb04FmwS6yjPoUaKze328nKIm293kqhnfNpMp4wu/1lqULV9A==,iv:FYD9CIPx4RZBX9e0QfBwLgnUt7JA3yJ1V/BCa3QZ2vY=,tag:JFH3Pv7qbdM6OkncpB/Hyw==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:001RmKt8wG8U6Gfgq8rW,iv:Or+KY8MDW30+OafR4YTQtddlVXTYxGz8GYTMcHvXNCU=,tag:ei555LpwDAYWGrEYrmV7XQ==,type:str]
+  #ENC[AES256_GCM,data:CFf96VrH72LTB+2hpsSlmH1JMbA=,iv:5jLg/GLkHIIg5GEgj3zC0iTYREqoyPZV40LlOu9KmMo=,tag:x3+fNhBpjEEBG2SMKOcf9A==,type:comment]
+  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:SkPDlgTDZA09FdxV44V8PYEAHlKpW/XGMxRgPl3utpo=,iv:kpRArZsyyeJWo4J2K5MPk0KqrnCcki4hOA7e5bYNfOw=,tag:mxjjcMpLa0NSwNgzD+8pBg==,type:str]
+  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:ww6vkhWPuzuYeKuWYV7APbvRpk+gxITWiQkJbLt+EsFsJtFNRyTQ9nwUVhEIE8l6rC/Q+P+879owuvqObT57Zw==,iv:5AsdTavILQjgoKh8fZ+BHbcxPKd1BhTzvAPInFMTIYc=,tag:npl1B7Pg+Nwz4+uueqdpOQ==,type:str]
+  #ENC[AES256_GCM,data:RR1P4pj1sAdQc0HLKngCSg==,iv:TD97WVqBHEqT3h2th7vwdVRESyMJGZP37Z+GKzmokCY=,tag:oaK8E7Ugd/01k9Z2aGEf+A==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:FGaCney+vPnCAA==,iv:JgSocLijaz+VOTYZVg2ij6Ka2J8rNKPIfJ5Mpbdbx9Y=,tag:LUGtAd/7VR5MbZ7Xe5Ya6Q==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:HItQqCF1XPMydDNd/+hivDexyd0=,iv:DINhKp/AfmqfQLzHqcQ1wN3AuKzJ/tOJEiYt9583VII=,tag:RFJigzlBB7NLuINH7U9aDg==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:fRxMntN7qhE+Nn+WOXl0BaEWbg72uJ3tyklkYrdKqzyPGO/5BZ8UuQ==,iv:hyQz+m+jxPm6VWTxq8rjLDqrB6FULoSlajAIu6rBGkQ=,tag:gu3TJ/wRUmow+oVyAL4diw==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBraXNsZEdVVndaZzU4WDhJ
-        Yml2RXlCYlBNUWxIYko3YjZ2WnVJaUhvMmxrCjdxNFVib09zaEx1eEpYVS83UHZu
-        cjNhanZ5ZEMxWTlYZ0lNTTMrakg3d28KLS0tIEx0ODZRRXRBRmxnK0RZRFdQL1Za
-        N0t5cktkdEswWFEvbUlOb3JXcTVuRWcKvvqM6IN3riYHT1dw7ULjeC7csz+NBEAw
-        HMjcEXNTIXJcLCO/RH4vPW54/Qi4jiXy7PvOJik++gunn0ITo1x0Nw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZHRHV3pFb3FEc3pSbnh4
+        YmlWMUVJSUdiSFU0MGxtdWJQSUd6dlZsa0hRCi9VRUE2N21OZ1dVRHljTlRhWWVH
+        Y21xYUsvaDY4MzZSMExNb2tBdURXalUKLS0tIDFveWZONWFjcndYRGtvU3M3S28w
+        TlJ1S3M5NE9KRWMrRy94YWVJRFlPcVkKtWT9YpMtTM9WsQ6bB4L5KH6ppm5pQaA+
+        f3tcKjF4E/N/nyVZtoHG2xFmXIWxZ3G8Nt3VJS8LTisru626UKvOtQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-29T19:39:20Z"
-  mac: ENC[AES256_GCM,data:G37anzeg2yMs8klPP3dJxSjWQEUn0Og0F0PC3QZ/PhZKNAV2liF+aNaaUWPENwyZgeroRy4X6G9IfQvEYErejjsrJ5qQGnwCftYhEBCAm1+7aGmT+20ANaoS8bu/3W5ZFLngyAy/A6lRpPtlajyRp8Ea57DnuiZRXfuR2MslMN4=,iv:QsnIAmvJPmPKUW66iuZ/L7wlQtdDk+j+YCxzZ/VMJQI=,tag:B12T/X8A8on55Sp1WN5u5w==,type:str]
+  lastmodified: "2025-11-29T19:44:02Z"
+  mac: ENC[AES256_GCM,data:wwTUojq+QIX3z/pnwUtY8NTT9PAbaAHmXt+2MdYVnV8iZ/bBl2F5XFdqXTrDrjs+X3AnQ1CYeoQXUlak3GdIzogGBhry/sPwGR1Xjfeh4MIQCan8I87BDBlNkBJ1DtmNWSmdenVvef8M0jZWx69yY/aSzdUlCuUbHqilc9jlreU=,iv:YLFu+C8yBOBF/oDDpWLGJaxWE2a7k4/j2ZUKvn+fDro=,tag:ACT4cqnlr3Hwx0plv7HFog==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
