Add more secrets

--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,27 +3,28 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:001RmKt8wG8U6Gfgq8rW,iv:Or+KY8MDW30+OafR4YTQtddlVXTYxGz8GYTMcHvXNCU=,tag:ei555LpwDAYWGrEYrmV7XQ==,type:str]
-  #ENC[AES256_GCM,data:CFf96VrH72LTB+2hpsSlmH1JMbA=,iv:5jLg/GLkHIIg5GEgj3zC0iTYREqoyPZV40LlOu9KmMo=,tag:x3+fNhBpjEEBG2SMKOcf9A==,type:comment]
-  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:SkPDlgTDZA09FdxV44V8PYEAHlKpW/XGMxRgPl3utpo=,iv:kpRArZsyyeJWo4J2K5MPk0KqrnCcki4hOA7e5bYNfOw=,tag:mxjjcMpLa0NSwNgzD+8pBg==,type:str]
-  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:ww6vkhWPuzuYeKuWYV7APbvRpk+gxITWiQkJbLt+EsFsJtFNRyTQ9nwUVhEIE8l6rC/Q+P+879owuvqObT57Zw==,iv:5AsdTavILQjgoKh8fZ+BHbcxPKd1BhTzvAPInFMTIYc=,tag:npl1B7Pg+Nwz4+uueqdpOQ==,type:str]
-  #ENC[AES256_GCM,data:RR1P4pj1sAdQc0HLKngCSg==,iv:TD97WVqBHEqT3h2th7vwdVRESyMJGZP37Z+GKzmokCY=,tag:oaK8E7Ugd/01k9Z2aGEf+A==,type:comment]
-  RESTIC_PASSWORD: ENC[AES256_GCM,data:FGaCney+vPnCAA==,iv:JgSocLijaz+VOTYZVg2ij6Ka2J8rNKPIfJ5Mpbdbx9Y=,tag:LUGtAd/7VR5MbZ7Xe5Ya6Q==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:HItQqCF1XPMydDNd/+hivDexyd0=,iv:DINhKp/AfmqfQLzHqcQ1wN3AuKzJ/tOJEiYt9583VII=,tag:RFJigzlBB7NLuINH7U9aDg==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:fRxMntN7qhE+Nn+WOXl0BaEWbg72uJ3tyklkYrdKqzyPGO/5BZ8UuQ==,iv:hyQz+m+jxPm6VWTxq8rjLDqrB6FULoSlajAIu6rBGkQ=,tag:gu3TJ/wRUmow+oVyAL4diw==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:OCoeWgVuRVTLov/AVH9v,iv:HFVtB+TJPSPTiL3jSU+XDCxCZr82oHKnK+nDTeDyovA=,tag:5f7jUW6MFNcvuqW4vDJvbg==,type:str]
+  #ENC[AES256_GCM,data:CuwUxo7MiMmZ7m34raDi/I+JfMc=,iv:SIC6XPTB5UMMmV5/urukJyFCrd9XMxiO+JNZJp4xtiI=,tag:STqxCSfyXwlrYi4i9yyMFw==,type:comment]
+  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:ry4ttiD45UX7xibREs4tZ90/7tqxV1AqDGTzd1b5FO0=,iv:EpUbUaaUl+Cwtobpk0ln4XpbDecOMc4Zp4mCueCRiS8=,tag:kDbeoJGfKiGbTmYOVUYSIg==,type:str]
+  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:JV8bZapI4poNjQFCdyCfJb0eJI06j86FCz1x+4xinaZRIpWmtcH6oV8NQN5wDxmLzQT/4TJ9/3Of68Cbz6lmtA==,iv:HrODr4VneXwe2FTHJvWdAIz38FeR0KfuicHtqibzH6s=,tag:GKphXZDW4UwzKYTQjW7Z/Q==,type:str]
+  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:IJv4qK996OarEF5gWXlRXaRPy6f/xe4b0IaEjO7sQNn9+jEO2cfjvz/Ao1YGFApdkOaEa10yxKUY,iv:99V461mIttwUbvh3NNcyj7ohoWBiv9dq/b+nEZwMRXI=,tag:iOU3QW0EHVNhwC2bzkH5kQ==,type:str]
+  #ENC[AES256_GCM,data:PmiY6WfQEFR+nEtdkVZU7w==,iv:hdBCqaPnzH1Tkecmj0DOnlQx0e3IEhKlPxF6OPzbJBo=,tag:2/8odG2sH+3XZtNoLP2IEw==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:bEH9wM9hyjJFbg==,iv:GBclqFgAADIHySMOkE4BNscDrVFBGemDclhnB99vEaM=,tag:VPPwtGxQX5P9Hbj+2dcPJw==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:mqkRoi2g6Pf3n2TamC2iCEin86Q=,iv:WAyTJ5MkLVSWG3KpXgO3vG0a9McGAM5D3iTG/f3FHWQ=,tag:9RlFhIOqMV6VKYIcCkvyVw==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:BypmT74eC/WhxOmLNdxpC+Z35GP93SgV4MzC8mXlJpakU1iPbo+J0Q==,iv:mn/woi4wsTfU17foYztgdiax4FOVyo444tb6vn8+JVs=,tag:FLLdRZexRbvBPQkcbWgP2g==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZHRHV3pFb3FEc3pSbnh4
-        YmlWMUVJSUdiSFU0MGxtdWJQSUd6dlZsa0hRCi9VRUE2N21OZ1dVRHljTlRhWWVH
-        Y21xYUsvaDY4MzZSMExNb2tBdURXalUKLS0tIDFveWZONWFjcndYRGtvU3M3S28w
-        TlJ1S3M5NE9KRWMrRy94YWVJRFlPcVkKtWT9YpMtTM9WsQ6bB4L5KH6ppm5pQaA+
-        f3tcKjF4E/N/nyVZtoHG2xFmXIWxZ3G8Nt3VJS8LTisru626UKvOtQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3WFZ0TFkxM3ZBb0tzei9m
+        STNSNkJ3dHd1Si9hN1ZYQkFMZmVneURBTjN3CjFzWTFjcUtleXRocG43V1pUTGpS
+        MlZsVFpxMk9ObnhaNHJBaFUxZm9JcFEKLS0tIHF5b0JnYWpLZ2o5cGpJMTk0NlI1
+        V1ZmeHJCWlFzOHVaZXJzdU0wUWY1OE0K1Dtg+1mU1MJ9Cl+YcvojzRXFi/MFINkn
+        MT3021U/x+nWo3egpzNn0gnu/h9FjI+OXVtJQ40BwBA/jjKFvrGcPA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-29T19:44:02Z"
-  mac: ENC[AES256_GCM,data:wwTUojq+QIX3z/pnwUtY8NTT9PAbaAHmXt+2MdYVnV8iZ/bBl2F5XFdqXTrDrjs+X3AnQ1CYeoQXUlak3GdIzogGBhry/sPwGR1Xjfeh4MIQCan8I87BDBlNkBJ1DtmNWSmdenVvef8M0jZWx69yY/aSzdUlCuUbHqilc9jlreU=,iv:YLFu+C8yBOBF/oDDpWLGJaxWE2a7k4/j2ZUKvn+fDro=,tag:ACT4cqnlr3Hwx0plv7HFog==,type:str]
+  lastmodified: "2025-11-29T19:59:12Z"
+  mac: ENC[AES256_GCM,data:9ipoIvZQurcWHhIK+Am5EOveSMw06l4QZsMieAoiiIkA4qfQvQ5F31pe2m1gy+59EuWsNJhNukzWgbhSA9PxaFRN5oW4KDf1gLWP0dtLK7/G/0THDzwDyqB0A1dfCOeeLu08JiDhAbpS6jyHdCGc7fMQ2Meya+dQCSzw0ieGq3w=,iv:ZNwfDmSQ7NVRbQTsSwCbEXd1bjr4HDcRRWbZegtYGoc=,tag:H51njiQnZmnDbKXV9KZn2A==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
