--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,28 +3,29 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:OCoeWgVuRVTLov/AVH9v,iv:HFVtB+TJPSPTiL3jSU+XDCxCZr82oHKnK+nDTeDyovA=,tag:5f7jUW6MFNcvuqW4vDJvbg==,type:str]
-  #ENC[AES256_GCM,data:CuwUxo7MiMmZ7m34raDi/I+JfMc=,iv:SIC6XPTB5UMMmV5/urukJyFCrd9XMxiO+JNZJp4xtiI=,tag:STqxCSfyXwlrYi4i9yyMFw==,type:comment]
-  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:ry4ttiD45UX7xibREs4tZ90/7tqxV1AqDGTzd1b5FO0=,iv:EpUbUaaUl+Cwtobpk0ln4XpbDecOMc4Zp4mCueCRiS8=,tag:kDbeoJGfKiGbTmYOVUYSIg==,type:str]
-  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:JV8bZapI4poNjQFCdyCfJb0eJI06j86FCz1x+4xinaZRIpWmtcH6oV8NQN5wDxmLzQT/4TJ9/3Of68Cbz6lmtA==,iv:HrODr4VneXwe2FTHJvWdAIz38FeR0KfuicHtqibzH6s=,tag:GKphXZDW4UwzKYTQjW7Z/Q==,type:str]
-  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:IJv4qK996OarEF5gWXlRXaRPy6f/xe4b0IaEjO7sQNn9+jEO2cfjvz/Ao1YGFApdkOaEa10yxKUY,iv:99V461mIttwUbvh3NNcyj7ohoWBiv9dq/b+nEZwMRXI=,tag:iOU3QW0EHVNhwC2bzkH5kQ==,type:str]
-  #ENC[AES256_GCM,data:PmiY6WfQEFR+nEtdkVZU7w==,iv:hdBCqaPnzH1Tkecmj0DOnlQx0e3IEhKlPxF6OPzbJBo=,tag:2/8odG2sH+3XZtNoLP2IEw==,type:comment]
-  RESTIC_PASSWORD: ENC[AES256_GCM,data:bEH9wM9hyjJFbg==,iv:GBclqFgAADIHySMOkE4BNscDrVFBGemDclhnB99vEaM=,tag:VPPwtGxQX5P9Hbj+2dcPJw==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:mqkRoi2g6Pf3n2TamC2iCEin86Q=,iv:WAyTJ5MkLVSWG3KpXgO3vG0a9McGAM5D3iTG/f3FHWQ=,tag:9RlFhIOqMV6VKYIcCkvyVw==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:BypmT74eC/WhxOmLNdxpC+Z35GP93SgV4MzC8mXlJpakU1iPbo+J0Q==,iv:mn/woi4wsTfU17foYztgdiax4FOVyo444tb6vn8+JVs=,tag:FLLdRZexRbvBPQkcbWgP2g==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:e2zTnzzpjaYqEKrL7amY,iv:DDonz8Dc+YIOs7WLHDsWJHT12eSlyH+uK7I+NTkpXjs=,tag:+/M/rgKRT8Ay9QLa9/WFSw==,type:str]
+  #ENC[AES256_GCM,data:dCpZJCAOXbhF5X3hl6D3J2bpZ58=,iv:RR4uWAsHgx5PcgEGIhsva33qgdTtB+V3bhvOop0B/i8=,tag:dtPHTEQYGkTHw4VFbQp8nw==,type:comment]
+  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:AT8+uYiZ7ifb4+j2clznaQNtfQIWypW2TFhcxLhbnAY=,iv:QEQNKV1pwqMHoOXkKkXTyv+4GSM3yOy09yS3QFa0ivM=,tag:uGwJmWN2BtMfzUsfOohXdg==,type:str]
+  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:D9llyoWSzO+wut2W15wPLbIjFVZGTsGx4s+v+KlDPOXeMxxWiSu3+EWaedTxmlk4pdMhNTo2EZ0ckvj8dFCehg==,iv:IGwt0GLDEEng57yDhvbYQrnX/56wal9Z+4j67GEC3Gg=,tag:Z7B00zYD30hKIlSepQehbA==,type:str]
+  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:S1RV2jjoHB/U7isJn8WPeAjF2F4IYZ3bYYiP3B6dSM7bFF8b0IKTmDT2GEj43PKzf7j1U9FxvG8S,iv:WsrtruUKKxT9mJaPhBQoGJtaQE3AQLPM2Oiq9Cc7f+c=,tag:huD9O1CzJ2jbvbqs8jTUrw==,type:str]
+  CLUSTER_NAME: ENC[AES256_GCM,data:uHf3ajlyEzGo,iv:NCH+rjy6Wtv0jIdTU6+3gDKFL/TC6ca0Ma8vjF2UftQ=,tag:encs8HiKz/Xww8RNUAYfZQ==,type:str]
+  #ENC[AES256_GCM,data:wQZ+eGREsV4qR0Ifgt/DFQ==,iv:O6E8nitCQjj8d8Uv7ZlIXziPEprmr9yr1dLEIK5JQAA=,tag:B5BQMH8RjruWIO3hIucSRg==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:/ke96RQHDRNb3A==,iv:jB9fN4L6Wf0XMoWaYj/895BGyeYe6r8cAd4NSEPyrJo=,tag:f9Uf0kaBIhZX4Plty/3tXQ==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:Vlj6fY6MnUyzwq4mn3UrYtHHaiI=,iv:BAAYfGuk6JDB6BPCWm2GDzpf4YGFz6xRtbbaBtmlNwY=,tag:uI5PjWcDTC/j1/y3ZLXaHQ==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:ga8spk/9vtElF3m4UVeCaXBqQz7HA/oR5hJAmnqDqbr4ZrIeYegQVQ==,iv:reaeneKVx4G7xX6EU2MzTCoJylp6c+gEd5qzl/4T/r4=,tag:6GGA43oePju6F9vEOUfqjA==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3WFZ0TFkxM3ZBb0tzei9m
-        STNSNkJ3dHd1Si9hN1ZYQkFMZmVneURBTjN3CjFzWTFjcUtleXRocG43V1pUTGpS
-        MlZsVFpxMk9ObnhaNHJBaFUxZm9JcFEKLS0tIHF5b0JnYWpLZ2o5cGpJMTk0NlI1
-        V1ZmeHJCWlFzOHVaZXJzdU0wUWY1OE0K1Dtg+1mU1MJ9Cl+YcvojzRXFi/MFINkn
-        MT3021U/x+nWo3egpzNn0gnu/h9FjI+OXVtJQ40BwBA/jjKFvrGcPA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5REl4RTg3UGo3dG5qNWZU
+        c2hVQkk4NkxVVWtYSGMwWWlRRHB5ejJDUDJNCkRWYzVoaFluUzNLaVRnc08zV1Jv
+        cytGdEZCQm5pak1zdkFrTHBjcVlySGcKLS0tIHVqREJnR0VvdDRoQk1vaEhEd1p2
+        cHpZOHBoUEpwTy8ybnBPQ3FjcEhUYk0KAm0Ly1sAW+qyYDAdJjb7e7uRmYOKLBTJ
+        ZoflHm9JVRZ+6YDuWRBEmx75BuinoSjjiVGXwGL3gcRD7aOAwpXDIA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-29T19:59:12Z"
-  mac: ENC[AES256_GCM,data:9ipoIvZQurcWHhIK+Am5EOveSMw06l4QZsMieAoiiIkA4qfQvQ5F31pe2m1gy+59EuWsNJhNukzWgbhSA9PxaFRN5oW4KDf1gLWP0dtLK7/G/0THDzwDyqB0A1dfCOeeLu08JiDhAbpS6jyHdCGc7fMQ2Meya+dQCSzw0ieGq3w=,iv:ZNwfDmSQ7NVRbQTsSwCbEXd1bjr4HDcRRWbZegtYGoc=,tag:H51njiQnZmnDbKXV9KZn2A==,type:str]
+  lastmodified: "2025-11-29T20:10:35Z"
+  mac: ENC[AES256_GCM,data:woX5wiAq0KysqF3rLtQ2RoS+GmnOCwQCa+x74pEFVtGxSytakfFHDXL+wxBAOekPtGRR/fNtTAHytyXlrnEJ13w91MMTn9bsBsmyOCwkDlHroc0u/snpEVWo/IINoQkCm16oZxL7NMke5eBBQW8M1/yOxU30uGGqxGQjWxuNn6o=,iv:Er7GAbiX8RDwB7tVWY5g87VuPxeUF8o4W2qwYI0L41Q=,tag:0Jv35N5SMND1chXzAcIAPw==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
