--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 # - ./frigate/ks.yaml
 # - ./home-assistant/ks.yaml
 # - ./hyperhdr/ks.yaml
-# - ./mosquitto/ks.yaml
+- ./mosquitto/ks.yaml
+
 # - ./wyoming-whisper/ks.yaml
 # - ./wyoming-piper/ks.yaml
