--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
 - ./esphome/ks.yaml
 
 # - ./frigate/ks.yaml
-# - ./home-assistant/ks.yaml
+- ./home-assistant/ks.yaml
 # - ./hyperhdr/ks.yaml
 - ./mosquitto/ks.yaml
 
