--- a/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -3,11 +3,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../../components/cephfs-mounts/backup.yaml
-  - ./secret-home-assistant.sops.yaml
-  - ./secret.sops.yaml
-  - ./helmrelease.yaml
+# - ../../../../components/cephfs-mounts/backup.yaml
+- ./secret-home-assistant.sops.yaml
+- ./secret.sops.yaml
+- ./helmrelease.yaml
 labels:
-  - pairs:
-      app.kubernetes.io/name: home-assistant
-      app.kubernetes.io/instance: home-assistant
+- pairs:
+    app.kubernetes.io/name: home-assistant
+    app.kubernetes.io/instance: home-assistant
