--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,29 +3,53 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:e2zTnzzpjaYqEKrL7amY,iv:DDonz8Dc+YIOs7WLHDsWJHT12eSlyH+uK7I+NTkpXjs=,tag:+/M/rgKRT8Ay9QLa9/WFSw==,type:str]
-  #ENC[AES256_GCM,data:dCpZJCAOXbhF5X3hl6D3J2bpZ58=,iv:RR4uWAsHgx5PcgEGIhsva33qgdTtB+V3bhvOop0B/i8=,tag:dtPHTEQYGkTHw4VFbQp8nw==,type:comment]
-  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:AT8+uYiZ7ifb4+j2clznaQNtfQIWypW2TFhcxLhbnAY=,iv:QEQNKV1pwqMHoOXkKkXTyv+4GSM3yOy09yS3QFa0ivM=,tag:uGwJmWN2BtMfzUsfOohXdg==,type:str]
-  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:D9llyoWSzO+wut2W15wPLbIjFVZGTsGx4s+v+KlDPOXeMxxWiSu3+EWaedTxmlk4pdMhNTo2EZ0ckvj8dFCehg==,iv:IGwt0GLDEEng57yDhvbYQrnX/56wal9Z+4j67GEC3Gg=,tag:Z7B00zYD30hKIlSepQehbA==,type:str]
-  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:S1RV2jjoHB/U7isJn8WPeAjF2F4IYZ3bYYiP3B6dSM7bFF8b0IKTmDT2GEj43PKzf7j1U9FxvG8S,iv:WsrtruUKKxT9mJaPhBQoGJtaQE3AQLPM2Oiq9Cc7f+c=,tag:huD9O1CzJ2jbvbqs8jTUrw==,type:str]
-  CLUSTER_NAME: ENC[AES256_GCM,data:uHf3ajlyEzGo,iv:NCH+rjy6Wtv0jIdTU6+3gDKFL/TC6ca0Ma8vjF2UftQ=,tag:encs8HiKz/Xww8RNUAYfZQ==,type:str]
-  #ENC[AES256_GCM,data:wQZ+eGREsV4qR0Ifgt/DFQ==,iv:O6E8nitCQjj8d8Uv7ZlIXziPEprmr9yr1dLEIK5JQAA=,tag:B5BQMH8RjruWIO3hIucSRg==,type:comment]
-  RESTIC_PASSWORD: ENC[AES256_GCM,data:/ke96RQHDRNb3A==,iv:jB9fN4L6Wf0XMoWaYj/895BGyeYe6r8cAd4NSEPyrJo=,tag:f9Uf0kaBIhZX4Plty/3tXQ==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:Vlj6fY6MnUyzwq4mn3UrYtHHaiI=,iv:BAAYfGuk6JDB6BPCWm2GDzpf4YGFz6xRtbbaBtmlNwY=,tag:uI5PjWcDTC/j1/y3ZLXaHQ==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:ga8spk/9vtElF3m4UVeCaXBqQz7HA/oR5hJAmnqDqbr4ZrIeYegQVQ==,iv:reaeneKVx4G7xX6EU2MzTCoJylp6c+gEd5qzl/4T/r4=,tag:6GGA43oePju6F9vEOUfqjA==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:g17IX93ODBY0voHTIlPS,iv:w5/7tf4119eY2AyiR25xbOmE0tnkgyaK7f0FvTHe01w=,tag:oeMDP2E41zmCB81ZT42mTg==,type:str]
+  #ENC[AES256_GCM,data:uE6SujcvZXdSwYMoBJAPb6H1beE=,iv:kLRIUfK68Ml25W3xdXoAa1s3Q0iPeKIbYy0Bba27cmA=,tag:sDMXiq20y2VmZXBrTviG8w==,type:comment]
+  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:qdutl00krsTZ+JPIBP/4wzyRE+rHVGIH07sxE5+C7u4=,iv:B/+0PzMXpJ1pxNYp5cbMqfJ5epfGOwoGjupP2EDubRw=,tag:xv5JdKrvvf63XCukfzzwdw==,type:str]
+  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:h2Lf9xfEt4v4NwIZqvkca1Gj62e9ORjALWVYK7+UOwW3JWSpbhLwTXRK9dyJt+v6EFz5GpDhaaPOUiLlqLuoWg==,iv:ZHeDNuDoqgKu/eoYoDBtCQOQzPS26g0qRY9oxKbj4X4=,tag:UP6iH+IVLkJgUxdeu+Yb4Q==,type:str]
+  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:YBXIMYoVAASVmVDQ7Qq7HbP/UWNofGFuSoKWZpnCMMV+ZLVWCZydJRFs5UXkXniMzPGOz4JEo0y1,iv:7YKXftPzJndJB17eLs+eDkqT/GpidX4rDfCy5QByI1M=,tag:BkrHoC4cKSzdCmF/34vapw==,type:str]
+  CLUSTER_NAME: ENC[AES256_GCM,data:4H/m9AiWUZHC,iv:MIk5d6FBvvPTGxifCvYZIEsV5TfdZeeVG6C4D1MiBds=,tag:fbBR0YVYVPmiPtg5gFjAyA==,type:str]
+  #ENC[AES256_GCM,data:DojoLuaiWcVxhl8FvRzUFQ==,iv:MRFBpYYurcEBp4BoSrTUa7VYwK7dYlQgcW+vtKqse4M=,tag:+0fKwtiy8WTjzfm3AmJGYw==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:gh/FOd8dHt2+lA==,iv:Z4d/ezW9raMi17XrGgmeqJSeSm9bl7jpTlgrr1BpM78=,tag:hBq01+rC7X19VQ6Pg08WXA==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:92FWzwi++CO8esEJAyUciXDiMCU=,iv:wKIvkX+0nfNG3/IiaXQpk4196Rv29iJ6tNGqs8Pp1Mo=,tag:KtZ3pog5IqK2RFfaVbkBfw==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:eRDDH11Xpl03QtMNLc3dFJ8yf6N1gM6y756rBp/oW5CEj9WfgVO2Zg==,iv:LXW6nJ87+dxR6dvajdPBHYaRj/NUbBnuatB4y5es+6k=,tag:zXXAcC2WNij7t3quWXOPjA==,type:str]
+  #ENC[AES256_GCM,data:1XnqxcYCmLoC,iv:aHbsZL+Z6WKoF9CJpo2GI/q/qtMFW+ETWZ2OgkHnWbg=,tag:0esioPLiaKEOMRhSm1Ktag==,type:comment]
+  NETWORK_BGP_SVC_CIDR: ENC[AES256_GCM,data:NQqFsNUJMiN9cbbG74Y=,iv:XoCnXuLplD+xDDeSJMkUI54udz+fkxSDg3pZ8lLCLD4=,tag:2z/4e4/JmlgmdBnNuMSB3w==,type:str]
+  NETWORK_K8S_POD_CIDR: ENC[AES256_GCM,data:aKsSDDJAxzRI9mW1,iv:My1+HkWkDJQ+xyFlTuih3lDGDk7CWHFpbGrVacL3+LA=,tag:chOBMeZa36GN4sEYmmXRAg==,type:str]
+  #ENC[AES256_GCM,data:gzJAz4buR7lmt9TBD0hxt/hR,iv:GdysbyFoYNUgomPWHrqAVK7UMkSlOC+Fqo6FuZcQt0k=,tag:IQF5lPMsJVdGgB1RpK8X2g==,type:comment]
+  #ENC[AES256_GCM,data:kHagjJt2rXjFFcRYbKk+l0j0S11jUx5ktk3o2yqO0730EU8=,iv:Qwv6dt4/NxdqMe14AcrXEg6RoTl1IqtWAk/+uDzKvfg=,tag:RSQW7j3Jgp7Nih/6iezWKg==,type:comment]
+  LB_K8S_ENDPOINT: ENC[AES256_GCM,data:bo+5ln8TSBcVoLo=,iv:RTVg2tdVBbbNGcQLKR9v4GmE+j7mEHrjRr5KUTtaV5A=,tag:6ZCipY4lXlCxz1/tnve4jQ==,type:str]
+  LB_GATEWAYAPI_EXTERNAL: ENC[AES256_GCM,data:HfLG1ptAbe6IK+0=,iv:MGJd6yeL0Sk82b3DvI0H6AtYz5SYu91be2v9QgrkOuw=,tag:NM91xJTszCgwqKruRz/Y4Q==,type:str]
+  LB_GATEWAYAPI_INTERNAL: ENC[AES256_GCM,data:DQNAwsT63kmgct8=,iv:KYOTWEnq0RhaiCIaQ1uZeWX/NviulVcrD7MV1A5Pbos=,tag:H1/KLj8u6Gy/DjrojZI/gA==,type:str]
+  LB_LLDAP: ENC[AES256_GCM,data:ewvz/koriupstjY=,iv:XUl+fxHNZzIQxbWyZxwPWBN1i+7y9KCSNpNjwNCpMSY=,tag:cxrJvJZnb3lfpeXyHhsjJg==,type:str]
+  #ENC[AES256_GCM,data:gkYraMgx0JqvScd2wIn2SJki64XYYobapHj27zA=,iv:uQDGuqosXx659HZNAyO/JhBLX72zzw4kHyWG7zBSHhk=,tag:d9Xpq2Jw7rF1/j5vCAlUCQ==,type:comment]
+  LB_KAS: ENC[AES256_GCM,data:LoHgwZ5yvsB27cI=,iv:c3/rdVYEYYWHOScQdgqOFMay5Q2vlLKAdR75ywRwBYM=,tag:Z7Xm/dowd4KcReyG5K6EuQ==,type:str]
+  LB_PLEX: ENC[AES256_GCM,data:CQPGhWd4bFQNO1g=,iv:W6vGfGVPlgZJRbOexINKYTXSBlkdiseYBOcCqau7p6o=,tag:tqnp5syx3A2/xtTWBDOhkw==,type:str]
+  LB_K8S_GATEWAY: ENC[AES256_GCM,data:FWSTrDdeLi045zo=,iv:om4mza4KqOMy6prgfaVqYxtMZS9AwfBgZ88Hx9c7JcE=,tag:MQ0/tC7CzKFaC7f95or3xw==,type:str]
+  LB_HASS: ENC[AES256_GCM,data:bLL+IuyO1uLYe54=,iv:hdovtGyOsj5T3ER+5u2Lz+rKwStekGDGJz9StQz/hQg=,tag:w/g4IFUI7/C6I0ji/VKrgg==,type:str]
+  LB_INGRESS_EXTERNAL: ENC[AES256_GCM,data:DShhvg+Q/Nvv078=,iv:VgaQ9jwkTEEStUPP34wVXMY6h9U9Cq/jEk9IfZhALuk=,tag:HYgyXr2MwlBL8Upg95jkjw==,type:str]
+  LB_INGRESS_INTERNAL: ENC[AES256_GCM,data:bzUUVO4RfLPn448=,iv:y2mdMpzkQbmeP+IwzOLpJsvYq8HUQgt4AVd/OQ1Lphc=,tag:7eCScf2L2Gu9PpNTNy/aLw==,type:str]
+  #ENC[AES256_GCM,data:IwolYLutD3TMeAMTw/YU0g==,iv:XmTim6dTB63nVIu1TxfYHlhngK/5zuviZtE5wKXmTzs=,tag:xTJZvJnFu5uEXkYVsJJxtQ==,type:comment]
+  LB_CEPH_MONS: ENC[AES256_GCM,data:QSrNKqGuxVqo31M=,iv:FKe3ce0IxM3PHZuBMVc3QcI3NMYxNmn5HlOzLr+IdVA=,tag:XxAuDajylr3B/iCvdpO6Lw==,type:str]
+  LB_INGRESS_BACKUPS_BUCKET: ENC[AES256_GCM,data:Dcl8t2RbM2KCv0g=,iv:NEA5wokG/NvyipnHmnI2/YbPC37I/tbGkhliWuFDc8k=,tag:RbezLdrUKiUmJ8U5IEl++g==,type:str]
+  LB_HYPERHDR: ENC[AES256_GCM,data:2sBjsIl86lvK3s8=,iv:AUgEDte2wTPp75QNZuAT9ci+jBwWeVjroMSSPvBn/IA=,tag:5VmZCJXXpan0btxIST6Kbw==,type:str]
+  LB_MQTT: ENC[AES256_GCM,data:Q6P/YxFqsoG7+wQ=,iv:mIwqEed/WNN7vF0uR0Rgo0UbAkdZaxU3digWPs9ucwI=,tag:Y45tszfiZ8x2VIoinJxSQg==,type:str]
+  LB_CODER: ENC[AES256_GCM,data:DeaVPGbhMTN8eso=,iv:4HYaPjkC8JtDls3hLhy8/5szF6pc1U0gphc8nt43+Ew=,tag:gldM0MXTZKzhQ8zPRRVyGA==,type:str]
+  LB_FRIGATE: ENC[AES256_GCM,data:ncSOC0OX2AJNAN8=,iv:T4NkTZ5MNAcZOLDAIYeXgrW1iR3V7paJFbiRntEbvdw=,tag:VDO5XS/Rz7WYiFgkDnd0nQ==,type:str]
+  #ENC[AES256_GCM,data:s3+GAaRF8bQy3OU4dr8phGiwt/IA6wtuZZgE4fseijrlwqwc05S5sTDV,iv:CoylHKDWZ0D/UOyvXANAo+VIHtnlAUFVle9Zv9f/H1Q=,tag:8T2prA1Q1TIADhRVDQwCHA==,type:comment]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5REl4RTg3UGo3dG5qNWZU
-        c2hVQkk4NkxVVWtYSGMwWWlRRHB5ejJDUDJNCkRWYzVoaFluUzNLaVRnc08zV1Jv
-        cytGdEZCQm5pak1zdkFrTHBjcVlySGcKLS0tIHVqREJnR0VvdDRoQk1vaEhEd1p2
-        cHpZOHBoUEpwTy8ybnBPQ3FjcEhUYk0KAm0Ly1sAW+qyYDAdJjb7e7uRmYOKLBTJ
-        ZoflHm9JVRZ+6YDuWRBEmx75BuinoSjjiVGXwGL3gcRD7aOAwpXDIA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArejBlSmpxR2I4Tm91Q0lS
+        UXBGVW1ZSnplSzhkeU82Z0Y0L0VyOWQycEM0CmNPclE0NVc3WHR0L1V0eFdCNDc5
+        VXlYTG1EZlFEVFNQblE3WThnV2dXcVkKLS0tIGVZR2NtaTFVR21BT0RZeE50UzVD
+        aktCbWg0NmZ1RzJybE5vblo0emJpdGMKxEj29jY4q4AjiyhLXlRE5ZGi2wUtht0Y
+        ytQV8NuTl5zCbVcOdFJt8RAlKYlZo9DLChsM/4CrZQ5mdoy43sMzmA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-29T20:10:35Z"
-  mac: ENC[AES256_GCM,data:woX5wiAq0KysqF3rLtQ2RoS+GmnOCwQCa+x74pEFVtGxSytakfFHDXL+wxBAOekPtGRR/fNtTAHytyXlrnEJ13w91MMTn9bsBsmyOCwkDlHroc0u/snpEVWo/IINoQkCm16oZxL7NMke5eBBQW8M1/yOxU30uGGqxGQjWxuNn6o=,iv:Er7GAbiX8RDwB7tVWY5g87VuPxeUF8o4W2qwYI0L41Q=,tag:0Jv35N5SMND1chXzAcIAPw==,type:str]
+  lastmodified: "2025-11-29T20:57:51Z"
+  mac: ENC[AES256_GCM,data:u97EFhy4aqv2ODu4ha6290DP/9DTNrS6u1bDXipMyt6N9yWoZfh/ck54QXGuPQMFJBUnofTqiwVMm3lnjgOrn6K/KbDVmynWAtctCQtXy6+4/oNqCOQ5LoIleqyW6md0ETmwhsqmur0zzd3jpXycbbhjZ3rcwewMPFXj7xK0pgc=,iv:2AuLg8ph/JkXyx7cajzOA3Zx8j78XL21bKRtX6xhGVM=,tag:053g8AeVLqxHKvoyfWTx9w==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
