--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -4,11 +4,12 @@ kind: Kustomization
 namespace: network
 
 components:
-  - ../../components/sops
+- ../../components/sops
 
 resources:
-  - ./namespace.yaml
-  - ./cloudflare-dns/ks.yaml
-  - ./cloudflare-tunnel/ks.yaml
-  - ./envoy-gateway/ks.yaml
-  - ./k8s-gateway/ks.yaml
+- ./namespace.yaml
+- ./cloudflare-dns/ks.yaml
+- ./cloudflare-tunnel/ks.yaml
+- ./envoy-gateway/ks.yaml
+- ./k8s-gateway/ks.yaml
+- ./multus/ks.yaml
